--- a/tools/package.json
+++ b/tools/package.json
@@ -1,16 +1,15 @@
 {
   "name": "tools",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "tsc-watch --onsuccess \"node dist/index.js\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "devDependencies": {
     "tsc-watch": "^2.1.2",
     "typescript": "^3.5.1"
   }
-}
