--- a/types/tsconfig.json
+++ b/types/tsconfig.json
@@ -1,7 +1,8 @@
 {
-    "compilerOptions": {
-        "target": "es2018",
-        "outDir": "./dist",
-        "rootDir": "./src"
-    }
+  "compilerOptions": {
+    "target": "es2018",
+    "outDir": "./dist",
+    "rootDir": "./src",
+    "declaration": true
+  }
 }
