--- a/usingjs/package.json
+++ b/usingjs/package.json
@@ -1,4 +1,14 @@
 {
+  "name": "usingjs",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "start": "tsc-watch --onsuccess \"node dist/index.js\""
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
     "tsc-watch": "^2.1.2",
     "typescript": "^3.5.1"
